<resources xmlns:tools="http://schemas.android.com/tools">

    <string name="app_name" translatable="false">Simple Photo Editor</string>
    <string name="app_version" translatable="false">Version 1.3</string>
    <string name="market_dev_name" translatable="false">Neteru+Studio</string>

    <string name="label_brush">Brush</string>
    <string name="label_emoji">Emoji</string>
    <string name="label_sticker">Sticker</string>
    <string name="label_eraser">Eraser</string>
    <string name="label_text">Text</string>
    <string name="label_filter">Filter</string>
    <string name="label_adjust">Adjust</string>

    <string name="done">Done</string>
    <string name="rotation">Rotation</string>
    <string name="opacity">Opacity</string>
    <string name="brush">Brush</string>
    <string name="close">Close</string>
    <string name="text">Text</string>
    <string name="eraser">Eraser</string>
    <string name="sticker">Sticker</string>
    <string name="emoji">Emoji</string>
    <string name="collection">Collection</string>
    <string name="more_app">More App</string>
    <string name="camera">Camera</string>
    <string name="share_app">Share App</string>
    <string name="gallery">Gallery</string>
    <string name="rate_us">Rate Us</string>
    <string name="share_application">Share Application</string>
    <string name="sharing_txt">Quickly edit your images and share them with your friends and family</string>
    <string name="select_picture">Select Picture</string>
    <string name="permission_denied">Permission denied!</string>
    <string name="image_saving_success">Image Saved Successfully</string>
    <string name="image_saving_failure">Failed to save Image</string>
    <string name="save_dialog_msg">Are you want to exit without saving image ?</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="discard">Discard</string>
    <string name="about_the_image">About the image</string>
    <string name="copy">Copy</string>
    <string name="share">Share</string>
    <string name="error_occurred">An error occurred!</string>
    <string name="copied_to_clipboard">Copied to the clipboard!</string>
    <string name="crop_image_menu_rotate_right">Rotate</string>
    <string name="crop_image_menu_crop">Crop</string>
    <string name="not_installed">have not been installed.</string>
    <string name="refresh">Refresh</string>
    <string name="my_collection">My Collection</string>
    <string name="home">Home</string>
    <string name="delete">Delete</string>
    <string name="confirmation">Confirmation</string>
    <string name="delete_image">Delete the image ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="saving_in_progress">Saving…</string>
    <string name="exif_extract_error">Unable to extract EXIF data</string>
    <string name="resize">Resize the image</string>

    <string name="ucrop_menu_crop" tools:override="true">Crop</string>
    <string name="ucrop_rotate" tools:override="true">Rotate</string>
    <string name="ucrop_scale" tools:override="true">Scale</string>
    <string name="ucrop_crop" tools:override="true">Crop</string>

</resources>
