<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.MainActivity">

    <TextView
        android:gravity="center"
        android:text="@string/app_name"
        android:textStyle="bold"
        android:textColor="@color/outerSpace"
        android:layout_marginBottom="@dimen/current_margin_6"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/collection"/>

    <TextView
        android:gravity="center"
        android:text="@string/app_version"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/current_margin_6"
        app:layout_constraintTop_toBottomOf="@+id/more_app"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/collection"
        android:clickable="true"
        android:focusable="true"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginBottom="@dimen/current_margin_2"
        android:foreground="?android:attr/selectableItemBackground"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/lens"
        app:cardCornerRadius="@dimen/circular_cardview_radius"
        app:cardBackgroundColor="@color/blue">

        <LinearLayout
            android:gravity="center"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:tint="@color/white"
                android:src="@drawable/ic_photo_library_48dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="ContentDescription" />

            <TextView
                android:gravity="center"
                android:text="@string/collection"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/more_app"
        android:clickable="true"
        android:focusable="true"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="@dimen/current_margin_2"
        android:foreground="?android:attr/selectableItemBackground"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lens"
        app:cardCornerRadius="@dimen/circular_cardview_radius"
        app:cardBackgroundColor="@color/orange">

        <LinearLayout
            android:gravity="center"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:tint="@color/white"
                android:src="@drawable/ic_more_horiz_48dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="ContentDescription" />

            <TextView
                android:gravity="center"
                android:text="@string/more_app"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/current_margin_1"
        android:layout_marginRight="@dimen/current_margin_1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toLeftOf="@id/lens"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/camera"
            android:clickable="true"
            android:focusable="true"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="@dimen/current_margin_1"
            android:foreground="?android:attr/selectableItemBackground"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/lens"
            app:cardCornerRadius="@dimen/circular_cardview_radius"
            app:cardBackgroundColor="@color/limegreen">

            <LinearLayout
                android:gravity="center"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:tint="@color/white"
                    android:src="@drawable/ic_camera_alt_48dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:gravity="center"
                    android:text="@string/camera"
                    android:textColor="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/share_app"
            android:clickable="true"
            android:focusable="true"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="@dimen/current_margin_1"
            android:foreground="?android:attr/selectableItemBackground"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/lens"
            app:cardCornerRadius="@dimen/circular_cardview_radius"
            app:cardBackgroundColor="@color/goldenYellow">

            <LinearLayout
                android:gravity="center"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:tint="@color/white"
                    android:src="@drawable/ic_share_48dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:gravity="center"
                    android:text="@string/share_app"
                    android:textColor="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/current_margin_1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/lens"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/gallery"
            android:clickable="true"
            android:focusable="true"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="@dimen/current_margin_1"
            android:foreground="?android:attr/selectableItemBackground"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/lens"
            app:cardCornerRadius="@dimen/circular_cardview_radius"
            app:cardBackgroundColor="@color/indigo">

            <LinearLayout
                android:gravity="center"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:tint="@color/white"
                    android:src="@drawable/ic_image_48dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:gravity="center"
                    android:text="@string/gallery"
                    android:textColor="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/rate_us"
            android:clickable="true"
            android:focusable="true"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="@dimen/current_margin_1"
            android:foreground="?android:attr/selectableItemBackground"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/lens"
            app:cardCornerRadius="@dimen/circular_cardview_radius"
            app:cardBackgroundColor="@color/red">

            <LinearLayout
                android:gravity="center"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:tint="@color/white"
                    android:src="@drawable/ic_star_48dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:gravity="center"
                    android:text="@string/rate_us"
                    android:textColor="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <ImageView
        android:id="@+id/lens"
        android:layout_width="108dp"
        android:layout_height="108dp"
        android:src="@drawable/ic_lens"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="ContentDescription" />

</androidx.constraintlayout.widget.ConstraintLayout>